testsuite/tests/grammar/invalid_list/token_element.lkt
from common import FooNode
from lexer_example import foo_lexer

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ListNode(list+(@Number))
}

class ListNode : FooNode {
    @parse_field items: ASTList[FooNode]
}
